src/css/style.css
/* Font Family setting */
@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;800&display=swap');

body {
    font-family: "Fira Sans", sans-serif;

    /* font-family: 'Inconsolata', monospace; */
    /* Try Editorial new & black & white site with color pop (nameless.today)*/
    background-color: rgba(0,0,0,.9);
    color: #fff;
    /* background: linear-gradient(65deg, #0F2027, #203A43, #2C5364, #203A43, #0F2027, #2C5364); */
    /* background-size: 400% 400%; */
    /* animation: animate 20s ease infinite; */
    height: 100vh;
    margin: 0;
}

.clipped {
    -webkit-clip-path: url(#svgPath);
    clip-path: url(#svgPath);
}

@keyframes animate {
    0% {
        background-position: 0 50%;
    }
    50% {
        background-position: 100% 50%;
    }
    100% {
        background-position: 0 50%;
    }
}

.wobble {
    animation: wobble 2s ease infinite;
}
@keyframes wobble {
    0% { transform: translateY(0%); }
    15% { transform: translateY(-25%) rotate(-5deg); }
    30% { transform: translateY(20%) rotate(3deg); }
    45% { transform: translateY(-15%) rotate(-3deg); }
    60% { transform: translateY(10%) rotate(2deg); }
    75% { transform: translateY(-5%) rotate(-1deg); }
    100% { transform: translateY(0%); }
}

.fade-in-down {
    animation: fade-in-down 2s ease-in-out;
}
@keyframes fade-in-down {
    0% {
        opacity: 0;
        transform: translateY(-20px);
    }
    100% {
        opacity: 1;
        transform: translateY(0);
    }
}

/* #main-content {
    
    margin: 0 auto;
    max-width: 960px;
} */

/* @media screen and (max-width: 800px) {
    #main-content {
        display: flex;
        flex-direction: column;
        margin: 0 1.5rem;
    }

    .hero h1 {
        font-size: 3rem !important;
    }
} */

h1, h2, h3, h4, h5, h6 {
    font-family: 'Inconsolata', monospace;
}

h2 {
    font-size: 1.75rem;
    font-weight: 300;
}

p {
    font-weight: 300;
}

strong {
    font-weight: 600;
}

img + em {
    display: flex;
    justify-content: center;
    margin-bottom: 4rem;
}

hr {
    border-color: #92B4C2;
    color: #92B4C2;
    background-color: #92B4C2;
}

section {
    margin: 6rem 0;
}

main {
    display: flex;
    width: 100%;
    height: 100vh;
}
header { 
    display: flex;
    flex: 0 1 auto;
    border-right: 1px solid #A9A9A9;
    overflow: none;
}
.right {
    display: flex;
    flex: 1 1 70%;
    overflow: auto;
}

.scrolling-container {
    display: flex;
    flex-direction: column;
    margin: 1rem;
}


/*
================
Responsive header
================
*/
/* Navbar */
.logo {
    text-decoration: none;
}
.nav {
    font-family: 'Inconsolata', monospace;
    margin: 1rem;
    display: flex;
    flex-direction: column;
    align-items: stretch;    
}

.nav-items {
    display: flex;
    flex-direction: column;
    justify-content: center;
    flex: 1 0 auto;
    gap: 2rem;
}

.nav-items a {
    font-size: 1.25rem;
    font-weight: 200;
    text-decoration: none;
}

.nav-item:hover {
    /* Filter is handling color change in nav */
    /* color: #EFB37D; */
    text-decoration: underline;
    filter: brightness(0) saturate(100%) invert(99%) sepia(48%) saturate(6147%) hue-rotate(303deg) brightness(101%) contrast(87%);
}

.active {
    /* Filter is handling color change in nav */
    filter: brightness(0) saturate(100%) invert(99%) sepia(48%) saturate(6147%) hue-rotate(303deg) brightness(101%) contrast(87%);
    text-decoration: none;
}

.nav-right {
    display: flex;
    justify-content: flex-end;
    align-items: center;
}



.nav-right .nav-item {
    padding: .25rem .5rem;
    text-decoration: none;
}

.nav-right .nav-item:hover {
    text-decoration: underline;
    background: #EFB37D;
    color:#333;
    border-radius: .25rem;
}


.nav-left h2 {
    font-family: "Subjectivity Medium", sans-serif;
}

#left-nav {
    display: flex;
}

#top-nav, #footer-small {
    display: none;
}

.icon-white {
    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(108deg) brightness(104%) contrast(104%);
}


/* TODO: Move all media queries to end of file */
@media screen and (max-width: 800px) {
    #left-nav {
        display: none;
    }
    #top-nav, #footer-small {
        display: flex;
    }

    header {
        border-right: none;
        flex: 1 1 auto;
    }

    .hero-top {
        justify-content: flex-start !important;
        height: unset;
    }

    .nav, .nav-items {
        flex-direction: row;
        justify-content: flex-end;
        align-items: center;
        margin: 0;
        flex: 1 1 auto;
    }

    .nav-items {
        gap: 1rem;
    }

    .nav-item {
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    .footer-container {
        flex: 1 1 auto;
        align-items: center;
        margin: 1rem 0;
        gap: 0.5rem;
    }

    .project-title {
        flex-direction: column;
        align-items: flex-start !important; /* remove !important when mediaquery is move */
    }

    .project-title h1 {
        margin: 0.5rem 0;
    }
    
    
}

@media screen and (min-width: 1660px) {
    .scrolling-container {
        margin: 5rem 15rem;
    }
}




/* MOAB Project */
.moab-governance {
    display: flex;
    gap: 2rem;
}


.moab-governance > * {
    flex: 1;
}




.home-title {
    color: #EFB37D;
}

.home-subtitle {
    font-weight: 300;
    color: rgba(255,255,255,.6);
    margin-bottom: 0;
}

/* .name-gradient {
    -webkit-text-fill-color: transparent;
    color: transparent;
    background: linear-gradient(130deg, #327AAD, #C23CC5);
    -webkit-background-clip: text;
    background-clip: text;
} */

/* Hero Styles */

.hero {
    display: flex;
    flex-direction: column;
    flex: 1 0 auto;
    justify-content: center;
    margin: 0 5rem;
}

.hero-top {
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
}
/* ... */

